@@ -37,6 +37,8 @@ This class encapsulates the Universal Scalability Law. Use the function
 
 \item{\code{peak}}{A vector with the predictor and response values of the peak.}
 
+\item{\code{optimal}}{A vector with the optimal predictor and response values.}
+
 \item{\code{efficiency}}{The efficiency, e.g. speedup per processor.}
 
 \item{\code{na.action}}{The \code{na.action} used by the model.}
